	* src/de/schlund/pfixxml/loader: Removed complete Apploader package.
	* projects/common/conf/apploader.xml: Removed Apploader configuration.
	* projects/common/conf/factory.xml: Removed Apploader factory init.
	* projects/common/conf/pfixlog.xml: Removed Apploader logging.
	* build.xml: Removed Apploader building.
	* skel/build-skel.xml: Removed Apploader building.

	Removed Apploader references:
	* src/de/schlund/pfixcore/generator/IHandlerFactory.java
	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java
	* src/de/schlund/pfixcore/workflow/app/IHandlerSimpleContainer.java
	* src/de/schlund/pfixcore/workflow/app/IWrapperSimpleContainer.java
	* src/de/schlund/pfixcore/workflow/app/ResdocFinalizerFactory.java
	* src/de/schlund/pfixcore/workflow/StateFactory.java
	* src/de/schlund/pfixcore/workflow/DirectOutputStateFactory.java
	* src/de/schlund/pfixcore/workflow/ContextInterceptorFactory.java
	* src/de/schlund/pfixcore/workflow/PageMap.java
	* src/de/schlund/pfixcore/workflow/DirectOutputPageMap.java
	* src/de/schlund/pfixcore/workflow/ContextResourceManager.java
	* src/de/schlund/pfixcore/webservice/AdminWebapp.java
	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java
	* src/de/schlund/pfixcore/webservice/ServiceRegistry.java
	* src/de/schlund/pfixxml/FactoryInitServlet.java
	* src/de/schlund/pfixxml/ServletManager.java

2007-02-13  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: don't reuse SPDocument
	if it has a pagename that differs from the one in the request

2007-02-12  Martin Leidig  <mleidig@schlund.de>

	Added support for deployment of external webapps. Support can be
	enabled by adding <webapps hostbased="true"/> to project.xml.in.
	With this option the project/host gets its own webapps directory
	servletconf/webapps_PROJECTNAME. At the moment the Pustefix webapps
	are still deployed to the shared webapps directory, but external