@@ -1,2 +1,0 @@
-#!/bin/sh
-java -Dapploader.script="$0" -classpath build de.schlund.pfixxml.loader.CommandClient $@ 
